History
-------

xx/04/2008  *** v2.38 ***

            - Uses DatLib v2.27.
            - Fixed generation of url within CMPro datafiles (needs quotes).

06/04/2008  *** v2.37 ***

            - Uses DatLib v2.26.
            - Minor tweaks to the DTD (header and manufacturer now optional).
            - Fixed empty header being written to Generic XML datafiles.
            - Fixed conversion of MESS XML to Generic XML (machines -> games).

04/04/2008  *** v2.36 ***

            - Uses DatLib v2.25.
            - Added automatic date population (based on the version number).
            - Renamed forcezipping to forcepacking (CMPro).
            - Renamed forcedrommode to rommode (RomCenter 3).
            - Renamed forcedbiosmode to biosmode (RomCenter 3).
            - Renamed forcedsamplemode to samplemode (RomCenter 3).
            - Changed from m/s/n to merged/split/unmerged (RomCenter 3).
            - Changed from y/n to yes/no (RomCenter 3).
            - Added fix summary for header items (appears in datutil.log).
            - Added warnings for invalid header items (appear in datutil.log).
            - Added notices for lost header items (appear in datutil.log).
            - Changed -Z to -P (although -Z also works as before).

24/03/2008  *** v2.35 ***

            - Uses DatLib v2.24.
            - Fixed crash (allzip had spurious carriage returns in kyukaidk).

17/03/2008  *** v2.34 ***

            - Uses DatLib v2.23.
            - Added date, email, homepage, url, comment, forcenodump to CMPro.
            - Added category to RomCenter header (for completeness).
            - Added the Generic XML format.
            - Note: CMPro, RomCenter and XML headers all contain the same info.
            - Added -T, -E, -H, -U, -O and -N (options for header information).

26/11/2007  *** v2.33 ***

            - Uses DatLib v2.22.
            - Fixed crash when loading full MESS XML (0.105 upwards).