@@ -5,7 +5,7 @@ xx/04/2008  *** v2.27 ***
 
             - Fixed generation of url within CMPro datafiles (needs quotes).
             - Added the <release> element to the ROM Management Datafile DTD.
-            - Added support for Game Launcher and GameEx map files (untested).
+            - Added support for Game Launcher and GameEx Map Files (untested).
 
 06/04/2008  *** v2.26 ***
 
