@@ -5,6 +5,7 @@ xx/04/2008  *** v2.38 ***
 
             - Uses DatLib v2.27.
             - Fixed generation of url within CMPro datafiles (needs quotes).
+            - Added support for Game Launcher and GameEx Map Files (untested).
 
 06/04/2008  *** v2.37 ***
 
